# cemba_data

./: .gitignore  MANIFEST.in  README.md  env.yaml  env_greedy.yaml  pyproject.toml  setup.py  yap.yaml
cemba_data/: __init__.py  __main__.py  _version.py  sbatch.py
cemba_data/demultiplex/: demultiplex.py  fastq_dataframe.py
cemba_data/files/: sbatch_template_yap-original.txt  snm3CMetrics.tsv  snm3C_metrics.tsv
cemba_data/files/default_config/: mapping_config_4m.ini  mapping_config_m3c.ini  mapping_config_m3c_multi.ini  mapping_config_mc.ini  mapping_config_mct.ini
cemba_data/files/gcp/: demultiplex.Snakefile  merge_lanes.Snakefile
cemba_data/files/mapping_summary_template/: m3c_template.ipynb  mct_template.ipynb
cemba_data/files/smk/: __init__.py  base.smk  bismark_base.smk  demultiplex.smk  hisat3n.smk  hisat3n_base.smk  mct_base.smk
cemba_data/gcp/: README.md  __init__.py  demultiplex.py  yap_gcp.py
cemba_data/gcp/smk/: demultiplex.Snakefile  demultiplex.smk  merge_lanes.Snakefile
cemba_data/gcp/yaml/: demultiplex.yaml  skypilot.yaml
cemba_data/hisat3n/: __init__.py  hisat3n_general.py  hisat3n_mct.py  stats_col_names.py  stats_parser.py  summary.py
cemba_data/hisat3n/config/: gcp.md
cemba_data/hisat3n/snakefile/: m3c-multi.Snakefile  m3c-multi.smk  m3c.Snakefile  m3c.smk
cemba_data/mapping/: config.py
cemba_data/mapping/Snakefile_template/: m3c.Snakefile
cemba_data/mapping/m3c/: __init__.py
cemba_data/mapping/pipelines/: __init__.py  m3c.py  mc.py  mct.py  mhap.py
cemba_data/mapping/stats/: __init__.py  plot.py
(+16 files in other folders)
