[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
write_to = 'cemba_data/_version.py'

[project]
name = "yap-gcp"
dynamic = ["version"]
authors = [
    { name="Hanqing Liu", email="hanliu@salk.edu" },
    { name="Wubin Ding", email="wding@salk.edu" },
]